--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <img src="./image2/Asset 1@3x 1.svg" alt="bank">
-        <li>БАНК</li>
+        <li class="black">БАНК</li>
         <li>БИЗНЕС</li>
         <li>ИНВЕСТИЦИИ</li>
         <li>СТРАХОВАНИЕ</li>
