--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             </div>
             <div class="last1">
                 <input class="inp1" type="number" onkeydown="return event.keyCode !== 69"
-                onkeypress="return event.keyCode === 8 || event.charCode >= 48 && event.charCode <= 57">
+                onkeypress="return event.keyCode === 8 || event.charCode <= 57">
             </div>
         </section>
         <section class="second">
@@ -45,7 +45,8 @@
             <p class="n">EUR</p>
             </div>
             <div class="last2">
-                <input class="inp2" type="number" onkeydown="return event.keyCode !== 69">
+                <input class="inp2" type="number" onkeydown="return event.keyCode !== 69"
+                onkeypress="return event.keyCode === 8 || event.charCode >= 48 && event.charCode <= 57">
             </div>
         </section>
     </main>
