--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             </div>
             <div class="last2">
                 <input class="inp2" type="number" onkeydown="return event.keyCode !== 69"
-                onkeypress="return event.keyCode === 8 || event.charCode >= 48 && event.charCode <= 57">
+                onkeypress="return event.keyCode === 8 || event.charCode <= 57">
             </div>
         </section>
     </main>
