--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
             <p class="m">EUR</p>
             </div>
             <div class="last1">
-                <input class="inp1" type="number" onkeydown="return event.keyCode !== 69"
-                onkeypress="return event.keyCode === 8 || event.charCode <= 57">
-            </div>
+                <input id="input1Box" class="inp1" type="number" onkeydown="return event.keyCode !== 69">
+                  </div>
+
         </section>
         <section class="second">
             <p id="w">Хочу приобрести</p>
@@ -45,8 +45,7 @@
             <p class="n">EUR</p>
             </div>
             <div class="last2">
-                <input class="inp2" type="number" onkeydown="return event.keyCode !== 69"
-                onkeypress="return event.keyCode === 8 || event.charCode <= 57">
+                <input id="input2Box" class="inp2" type="number" onkeydown="return event.keyCode !== 69">
             </div>
         </section>
     </main>
